Revision 0.0.4, 01-07-2015
--------------------------

* Fix to MRO compliance for mixin classes generation at pysnmp backend
* Fix to repeated imports in generated code at pysnmp backend

Revision 0.0.3, 28-06-2015
--------------------------

* Two-pass compiler design allows for much accurate code generation.
* Sphinx-based documentation first introduced

Revision 0.0.0, 11-04-2015
--------------------------

* First public release, not fully operational yet